# apocomitamatma.pl

./: .copier-answers.yml  .dockerignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  buildinfo.bash  compose.yml  pyproject.toml  statistics.py  statistics.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: coverage.yml
api/: Dockerfile  dependencies.py  main.py  pyproject.toml  settings.py  settings.toml
api/app/: dependencies.py  main.py  settings.py
front/: Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
front/src/lib/: build.json  statistics.json
front/src/lib/components/: Carousel.svelte  Container.svelte  FilmCounter.svelte  Footer.svelte  Icon.svelte  Link.svelte  Logo.svelte  Nav.svelte  Omens.svelte  Sprite.svelte  index.js
front/src/lib/components/sprites/: DeltaSprite.svelte  FiguresSprite.svelte  RizzSprite.svelte  index.js
front/src/lib/images/omens/: index.js
front/src/routes/: +layout.svelte  +page.svelte  FloatingStatistics.svelte  Header.svelte  Icon.svelte  Nav.svelte  Omens.svelte  Sprite.svelte
front/src/routes/contact/: +page.svelte
front/src/routes/discord/: +page.server.js
front/src/routes/faq/: +page.svelte
front/src/routes/films/: +page.svelte
front/tests/: test.js
gauss/: __init__.py
scripts/: skeleton.0.0.2rc-219-g781ce0c.bash
tests/: test_gauss.py
