[project]
name = "apocomitamatma-pl"
version = "0.1.0"
authors = [
    { name = "bswck", email = "bartoszpiotrslawecki@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.1",
    "pydantic>=2.8.2",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "more-itertools>=10.3.0",
    "aiocache>=0.12.2",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.0",
    "ruff>=0.5.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/apocomitamatma_pl"]
